# python_Package

./: pyproject.toml
.github/: release.py
.github/workflows/: deploy.yml  release.yml
src/example_package_dipakm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
