[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

#[project]
#name = "example_package_dipakm"
#authors = [
#  { name="Dipak", email="dipakm193@gmail.com" },
#]
#version = "v0.0.1"
#description = "A small example package"
#readme = "README.md"
#requires-python = ">=3.6"
#classifiers = [
#    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: MIT License",
#    "Operating System :: OS Independent",
#]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
